--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-short-course-order--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-short-course-order--teaser.html.twig
@@ -57,8 +57,7 @@
                 <div class="col-xs-12 col-sm-6">
 
                     {# Begin - price #}
-                    {% if content.field_vih_sco_price %}
-                        <!-- Begin - price -->
+                    {% if node.field_vih_sco_price.value %}
                         <div class="boxy boxy--price">
                             <div class="boxy__heading">
                                 <h2 class="boxy__heading__title heading-h4">{{ "Total price" | trans }}</h2>
@@ -68,7 +67,6 @@
                                 {{ content.field_vih_sco_price }}
                             </div>
                         </div>
-                        <!-- End - price -->
                     {% endif %}
                     {# End - price #}
 
