--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_class-packages.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_class-packages.scss
@@ -26,6 +26,11 @@
     padding: 0;
   }
 
+  .boxy__footer {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   &.boxy--class-packages--list-advanced {
 
     .panel-body {
