--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -136,6 +136,48 @@ view_mode ? view_mode|clean_class,
                                     </div>
                                     <div class="boxy__body">
 
+                                        <!-- Begin - show all modal -->
+                                        <div class="modal fade" id="all-courses" tabindex="-1" role="dialog">
+                                            <div class="modal-dialog modal-lg" role="document">
+                                                <div class="modal-content">
+
+                                                    {# Begin - body #}
+                                                    <div class="modal-body">
+                                                        {% for period_id, period_content in content.periods %}
+
+                                                            <!-- Begin - class packages -->
+                                                            <div class="boxy boxy--class-packages boxy--class-packages--list-advanced">
+                                                                <div class="boxy__body">
+
+                                                                    <!-- Begin - panels -->
+                                                                    <div class="panel-group" role="tablist">
+
+                                                                        <div class="panel-group__heading">
+                                                                            <h4 class="panel-group__heading__title">
+                                                                                {{ period_content.title }}
+                                                                            </h4>
+                                                                        </div>
+
+                                                                        {% for period_class_package_id, period_class_package in period_content.classes_packages %}
+                                                                            {{ period_class_package.term }}
+                                                                        {% endfor %}
+
+                                                                    </div>
+                                                                    <!-- End - panels -->
+
+                                                                </div>
+                                                            </div>
+                                                            <!-- End - class packages -->
+
+                                                        {% endfor %}
+                                                    </div>
+                                                    {# End - body #}
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- End - show all modal -->
+
                                         <!-- Begin - panels -->
                                         <div class="panel-group" id="accordion" role="tablist">
 
@@ -146,21 +188,87 @@ view_mode ? view_mode|clean_class,
                                             </div>
 
                                             {% for class_package_id, class_package in content.classes_packages %}
+
                                                 <div class="panel panel-default panel-type--{{ class_package.term['#taxonomy_term'].field_vih_class_package_color.value }}">
 
                                                     <!-- Begin - heading -->
                                                     <div class="panel-heading" id="heading-{{ class_package_id }}">
                                                         <h4 class="panel-title heading-h5">
-                                                            {{ class_package.term }}
+                                                            <a role="button" data-toggle="modal" data-target="#class-modal-cp-{{ class_package_id }}">
+                                                                {{ class_package.name }} {{ class_package.period_name }}
+                                                            </a>
                                                         </h4>
                                                     </div>
                                                     <!-- End - heading -->
+
+                                                    <!-- Begin - modal -->
+                                                    <div class="modal fade" id="class-modal-cp-{{ class_package_id }}" tabindex="-1" role="dialog">
+                                                        <div class="modal-dialog modal-lg" role="document">
+                                                            <div class="modal-content">
+
+                                                                {% if file_url(class_package.term['#taxonomy_term'].field_vih_cp_image.entity.fileuri) %}
+                                                                    {# Begin - header #}
+                                                                    <div class="modal-header" style="background-image: url('{{ class_package.term['#taxonomy_term'].field_vih_cp_image.entity.fileuri | image_style('modal') }}');">
+                                                                        <button type="button" class="close" data-dismiss="modal" aria-label="{{ 'Close' | trans }}">
+                                                                            <span aria-hidden="true">&times;</span>
+                                                                        </button>
+
+                                                                        <h3 class="modal-title heading-h1">
+                                                                            {{ class_package.name }}
+                                                                        </h3>
+                                                                    </div>
+                                                                    {# End - header #}
+                                                                {% endif %}
+
+                                                                {# Begin - body #}
+                                                                <div class="modal-body">
+
+                                                                    <!-- Begin - class packages -->
+                                                                    <div class="boxy boxy--class-packages boxy--class-packages--list-advanced">
+                                                                        <div class="boxy__body">
+
+                                                                            <!-- Begin - panels -->
+                                                                            <div class="panel-group" role="tablist">
+
+                                                                                <div class="panel-group__heading">
+                                                                                    <h4 class="panel-group__heading__title">
+                                                                                        {{ content.periods[class_package.period_id].title }}
+                                                                                    </h4>
+                                                                                </div>
+
+                                                                                {{ class_package.term }}
+
+                                                                            </div>
+                                                                            <!-- End - panels -->
+
+                                                                        </div>
+                                                                    </div>
+                                                                    <!-- End - class packages -->
+
+                                                                </div>
+                                                                {# End - body #}
+
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <!-- End - modal -->
 
                                                 </div>
                                             {% endfor %}
 
                                         </div>
                                         <!-- End - panels -->
+
+                                    </div>
+                                    <div class="boxy__footer">
+
+                                        <!-- Begin - action -->
+                                        <div class="text-right">
+                                            <a role="button" class="btn btn-default" data-toggle="modal" data-target="#all-courses">
+                                                {{ 'Show all' | trans }}
+                                            </a>
+                                        </div>
+                                        <!-- End - action -->
 
                                     </div>
                                 </div>
