--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -1,90 +1,37 @@
-<a role="button" data-toggle="modal" data-target="#class-modal-cp-{{ term.id }}">
-    {{ name }}
-</a>
+{% set tab_class_package_id = "tabs-class-package--"~term.id~"--"~random() %}
 
-{# Begin - modal #}
-<div class="modal fade" id="class-modal-cp-{{ term.id }}" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
+<div id="{{ tab_class_package_id }}">
 
-            {# Begin - header #}
-            <div class="modal-header" style="background-image: url('{{ elements['#background_image'] }}');">
-                <button type="button" class="close" data-dismiss="modal" aria-label="{{ 'Close' | trans }}">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+    {% for key, slot in elements['#slots'] %}
+        {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random() %}
+        <div class="panel panel-default">
 
-                <h3 class="modal-title heading-h1">
-                    {{ name }}
-                </h3>
+            <!-- Begin - heading -->
+            <div class="panel-heading" id="heading-{{ class_package_id }}">
+                <h4 class="panel-title heading-h5">
+                    <a role="button" data-toggle="collapse"
+                       data-parent="#{{ tab_class_package_id }}"
+                       href="#{{ slot_id }}"
+                       aria-expanded="false"
+                       aria-controls="collapse-{{ class_package_id }}">
+                        {{ slot.name }}
+                    </a>
+                </h4>
             </div>
-            {# End - header #}
+            <!-- End - heading -->
 
-            {# Begin - body #}
-            <div class="modal-body">
-                <h2>{{ name }}</h2>
+            <!-- Begin - body -->
+            <div id="{{ slot_id }}" class="panel-collapse collapse" role="tabpanel">
 
-                <div class="partial">
-                    <div class="partial__body">
-                        <p>{{ description|striptags }}</p>
-                    </div>
+                <div class="panel-body">
+                    {% for class in slot['classes'] %}
+                        {{ class }}
+                    {% endfor %}
                 </div>
-
-                <!-- Begin - class packages -->
-                <div class="boxy boxy--class-packages boxy--class-packages--list-advanced">
-                    <div class="boxy__body">
-
-                        <!-- Begin - panels -->
-                        <div class="panel-group" id="tabs-class-package-{{ term.id }}" role="tablist">
-
-                            <div class="panel-group__heading">
-                                <h4 class="panel-group__heading__title">
-                                    {{ 'List of courses in ' | trans }}{{ term.name.value }}
-                                </h4>
-                            </div>
-
-                            {% for key, slot in elements['#slots'] %}
-                                <div class="panel panel-default">
-
-                                    <!-- Begin - heading -->
-                                    <div class="panel-heading" id="heading-{{ class_package_id }}">
-                                        <h4 class="panel-title heading-h5">
-                                            <a role="button" data-toggle="collapse"
-                                               data-parent="#tabs-class-package-{{ term.id }}"
-                                               href="#tabs-class-package-{{ term.id }}-slot-{{ key }}"
-                                               aria-expanded="false"
-                                               aria-controls="collapse-{{ class_package_id }}">
-                                                {{ slot.name }}
-                                            </a>
-                                        </h4>
-                                    </div>
-                                    <!-- End - heading -->
-
-                                    <!-- Begin - body -->
-                                    <div id="tabs-class-package-{{ term.id }}-slot-{{ key }}"
-                                         class="panel-collapse collapse" role="tabpanel">
-
-                                        <div class="panel-body">
-                                            {% for class in slot['classes'] %}
-                                                {{ class }}
-                                            {% endfor %}
-                                        </div>
-                                    </div>
-                                    <!-- End - body -->
-
-                                </div>
-                            {% endfor %}
-
-                        </div>
-                        <!-- End - panels -->
-
-                    </div>
-                </div>
-                <!-- End - class packages -->
-
             </div>
-            {# End - body #}
+            <!-- End - body -->
 
         </div>
-    </div>
+    {% endfor %}
+
 </div>
-{# End - modal #}
