--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -1,37 +1,43 @@
-{% set tab_class_package_id = "tabs-class-package--"~term.id~"--"~random() %}
+{% set random_number = random() %}
 
-<div id="{{ tab_class_package_id }}">
+<div>
 
-    {% for key, slot in elements['#slots'] %}
-        {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random() %}
-        <div class="panel panel-default">
+    <!-- Begin - tabs -->
+    <ul class="nav nav-tabs" role="tablist">
+        {% for key, slot in elements['#slots'] %}
+            {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
 
-            <!-- Begin - heading -->
-            <div class="panel-heading" id="heading-{{ class_package_id }}">
-                <h4 class="panel-title heading-h5">
-                    <a role="button" data-toggle="collapse"
-                       data-parent="#{{ tab_class_package_id }}"
-                       href="#{{ slot_id }}"
-                       aria-expanded="false"
-                       aria-controls="collapse-{{ class_package_id }}">
-                        {{ slot.name }}
-                    </a>
-                </h4>
+            {% if loop.first %}
+                <li role="presentation" class="active">
+            {% else %}
+                <li role="presentation">
+            {% endif %}
+                <a href="#{{ slot_id }}" aria-controls="home" role="tab" data-toggle="tab">{{ slot.name }}</a>
+            </li>
+        {% endfor %}
+    </ul>
+    <!-- End - tabs -->
+
+    <!-- Begin - content -->
+    <div class="tab-content">
+
+        {% for key, slot in elements['#slots'] %}
+            {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+
+            {% if loop.first %}
+                <div role="tabpanel" class="tab-pane active" id="{{ slot_id }}">
+            {% else %}
+                <div role="tabpanel" class="tab-pane" id="{{ slot_id }}">
+            {% endif %}
+
+                {% for class in slot['classes'] %}
+                    {{ class }}
+                {% endfor %}
+
             </div>
-            <!-- End - heading -->
+        {% endfor %}
 
-            <!-- Begin - body -->
-            <div id="{{ slot_id }}" class="panel-collapse collapse" role="tabpanel">
-
-                <div class="panel-body">
-                    {% for class in slot['classes'] %}
-                        {{ class }}
-                    {% endfor %}
-                </div>
-            </div>
-            <!-- End - body -->
-
-        </div>
-    {% endfor %}
+    </div>
+    <!-- End - content -->
 
 </div>
