--- a/docroot/themes/custom/site/src/styles/theme/components/boxy/_class-packages.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/boxy/_class-packages.scss
@@ -57,6 +57,8 @@
 
         border: 0;
 
+        text-transform: uppercase;
+
         color: $text-color;
         font-weight: $font-weight-bold;
       }
@@ -82,6 +84,8 @@
     > li {
 
       > a {
+        text-transform: uppercase;
+
         color: $text-color;
         font-weight: $font-weight-bold;
       }
