--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--teaser.html.twig
@@ -2,7 +2,7 @@
     <div class="entity-teaser__inner">
 
         {# Begin - overlay #}
-        <div class="entity-teaser__image__overlay entity-teaser__image__overlay--{{ term.field_vih_class_package_color.value }}">
+        <div class="entity-teaser__image__overlay entity-teaser__image__overlay--{{ term.field_vih_class_color.value }}">
             {{ name }}
         </div>
         {# End - overlay #}
