--- a/docroot/themes/custom/site/src/styles/variables/_bootstrap.scss
+++ b/docroot/themes/custom/site/src/styles/variables/_bootstrap.scss
@@ -619,7 +619,7 @@ $modal-header-border-color:   #e5e5e5 !default;
 //** Modal footer border color
 $modal-footer-border-color:   $modal-header-border-color !default;
 
-$modal-lg:                    900px !default;
+$modal-lg:                    1050px;
 $modal-md:                    600px !default;
 $modal-sm:                    300px !default;
 
