--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -6,14 +6,14 @@
     <div class="hidden-xs hidden-sm">
         <ul class="nav nav-tabs nav-justified" role="tablist">
             {% for key, slot in elements['#slots'] %}
-                {% set desktop_tab_slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+                {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
 
                 {% if loop.first %}
                     <li role="presentation" class="active">
                 {% else %}
                     <li role="presentation">
                 {% endif %}
-                    <a href="#{{ desktop_tab_slot_id }}" role="tab" data-toggle="tab">{{ slot.name }}</a>
+                    <a href="#{{ slot_id }}" role="tab" data-toggle="tab">{{ slot.name }}</a>
                 </li>
             {% endfor %}
         </ul>
@@ -24,14 +24,14 @@
     <div class="visible-xs visible-sm">
         <ul class="nav nav-pills nav-stacked">
             {% for key, slot in elements['#slots'] %}
-                {% set responsive_pill_slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+                {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
 
                 {% if loop.first %}
                     <li role="presentation" class="active">
                 {% else %}
                     <li role="presentation">
                 {% endif %}
-                    <a href="#{{ responsive_pill_slot_id }}" aria-controls="home" role="tab" data-toggle="tab">{{ slot.name }}</a>
+                    <a href="#{{ slot_id }}" aria-controls="home" role="tab" data-toggle="tab">{{ slot.name }}</a>
                 </li>
             {% endfor %}
         </ul>
@@ -42,12 +42,12 @@
     <div class="tab-content">
 
         {% for key, slot in elements['#slots'] %}
-            {% set content_slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
+            {% set slot_id = "tabs-class-package--"~term.id~"--slot--"~key~"--"~random_number %}
 
             {% if loop.first %}
-                <div role="tabpanel" class="tab-pane active" id="{{ content_slot_id }}">
+                <div role="tabpanel" class="tab-pane active" id="{{ slot_id }}">
             {% else %}
-                <div role="tabpanel" class="tab-pane" id="{{ content_slot_id }}">
+                <div role="tabpanel" class="tab-pane" id="{{ slot_id }}">
             {% endif %}
 
                 {% for class in slot['classes'] %}
