--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -267,7 +267,7 @@ view_mode ? view_mode|clean_class,
                                         <!-- Begin - action -->
                                         <div class="text-right">
                                             <a role="button" class="btn btn-default" data-toggle="modal" data-target="#all-courses">
-                                                {{ 'Show all' | trans }}
+                                                {{ 'Show all subjects' | trans }}
                                             </a>
                                         </div>
                                         <!-- End - action -->
